--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=pharmanet
+
+spring.datasource.url=jdbc:mysql://localhost:3306/pharmanet
+spring.datasource.username=root
+spring.datasource.password=GaTo2850
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
