--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pharmanet
 
-spring.datasource.url=jdbc:mysql://mysql_database:3306/pharmanet
-spring.datasource.username=juan
+spring.datasource.url=jdbc:mysql://localhost:3306/pharmanet
+spring.datasource.username=root
 spring.datasource.password=GaTo2850
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
