--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=pharmanet
 
-spring.datasource.url=jdbc:mysql://mysql_database:3306/pharmanet
-spring.datasource.username=juan
-spring.datasource.password=GaTo2850
+spring.datasource.url=jdbc:mysql://localhost:3306/pharmanet
+spring.datasource.username=root
+spring.datasource.password=Aries7878
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
